@@ -1,0 +1,8 @@
+Title: Increased performance of multisite GUI with a large userbase
+Level: 1
+Component: multisite
+Version: 1.2.3i8
+Date: 1386595064
+Class: fix
+
+
